# mp-little-boat-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
little-boat-abstractions/: Cargo.toml
little-boat-abstractions/src/: config.rs  lib.rs  services.rs
little-boat-abstractions/src/services/: chat.rs  control.rs  signaling.rs  system.rs
little-boat-client/: Cargo.toml
little-boat-client-term/: Cargo.toml
little-boat-client-term/src/: app.rs  application.rs  keymaps.rs  lib.rs  main.rs  notifications.rs  services.rs  ui.rs  views.rs
little-boat-client-term/src/application/: event.rs  service_status.rs  state.rs
little-boat-client-term/src/services/: webrtc_service.rs
little-boat-client-term/src/ui/: app.rs  chat.rs  chat_area.rs  chat_input_area.rs  services_status.rs  status_bar.rs  widgets.rs
little-boat-client-term/src/ui/chat/: dashboard.rs  input.rs  status_bar.rs  user_list.rs
little-boat-client-term/src/views/: chat.rs  chat_board_events.rs  chat_board_view.rs  chat_contacts_events.rs  chat_contacts_view.rs  chat_messages_events.rs  chat_messages_list_events.rs  chat_messages_list_view.rs  chat_messages_view.rs  chat_messasge_panel_events.rs  chat_messasge_panel_view.rs  chat_view.rs  chat_view_context.rs  frame.rs
little-boat-client-term/src/views/chat/: chat_board_events.rs  chat_board_view.rs  chat_contacts_events.rs  chat_contacts_view.rs  chat_messages_events.rs  chat_messages_list_events.rs  chat_messages_list_view.rs  chat_messages_view.rs  chat_messasge_panel_events.rs  chat_messasge_panel_view.rs  chat_view_context.rs
little-boat-client/src/: build.rs  chat.rs  echo.rs  main.rs  server.rs
little-boat-client/src/chat/: connections.rs  echo_server.rs  messages.rs
little-boat-client/src/ui/: Application.slint  Styles.slint
little-boat-client/src/ui/widgets/chat/: ChatGroupSideBar.slint  ChatGroupsAdapter.slint  ChatView.slint
little-boat-client/src/views/: Application.slint  ApplicationSettings.slint
little-boat-client/src/views/Menus/SideBar/: SideBar.slint
little-boat-client/src/views/Pages/: Page.slint
little-boat-core/: Cargo.toml
little-boat-core/src/: client.rs  config.rs  lib.rs  services.rs
little-boat-core/src/config/: client.rs  client_init.rs  defaults.rs
little-boat-core/src/services/: signaling.rs
little-boat-db/: Cargo.toml
little-boat-db/src/: database.rs  database_encrypt.rs  errors.rs  lib.rs  options_db.rs
little-boat-db/src/database/: aes.rs  chacha20poly1305.rs  encryption.rs  metadata.rs
little-boat-service-chat/: Cargo.toml
little-boat-service-chat/src/: chat.rs  chat_messages.rs  lib.rs
little-boat-service-chat/tests/: test.rs
little-boat-service-signaling/: Cargo.toml
little-boat-service-signaling/src/: lib.rs
little-boat-service-signaling/tests/: test.rs
little-boat-service-signaling/tests/test/: client_connect_disconnect.rs  message_broadcasting.rs  message_handling.rs  message_serialization.rs  ping_pong_handling.rs  start_stop.rs  test_config.rs
little-boat-services/: Cargo.toml
little-boat-services/src/: lib.rs
