[workspace]
resolver = "2"
members = [
	"little-boat-client", 
	"little-boat-core",
	"little-boat-db"
]

default-members = [
	"little-boat-client", 
	"little-boat-core",
	"little-boat-db"
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[workspace.dependencies]
tokio = { version = "1.46.1", features = [
	"rt",
	"rt-multi-thread",
	"io-util",
	"io-std",
	"time",
	"process",
	"macros",
	"fs",
	"parking_lot",
] }
slint = "1.12.1"
slint-build = "1.12.1"
sled = "0.34.7"
encrypted-sled = "0.2.0"
jsonwebtoken = "9.3.1"
simd-json = "0.15.1"
pulldown-cmark = "0.13.0"
anyhow = "1.0.98"



[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
authors = ["Hash2000 <infinitehash@yandex.ru>"]
categories = ["tools"]
repository = "https://github.com/hash2000/mp-little-boat-rs"
license = "MPL-2.0"
