[workspace]
resolver = "2"
members = [
	"little-boat-client", 
	"little-boat-client-term", 
	"little-boat-core",
	"little-boat-db"
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[workspace.dependencies]
# logs
log = "0.4.27"
env_logger = "0.11.8"

# errors 
thiserror = "2.0.16"
anyhow = "1.0.98"

# key-value embedded database
sled = "0.34.7"

# async
async-trait = "0.1.89"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
tokio-test = "0.4"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.27.0"
tokio = { version = "1.47.1", features = [
	"full"
] }

# desctop UI
iced = { version = "0.13.1", default-features = false, features = [
    "highlighter", 
    "tokio", 
    "debug"
] }

# terminal UI
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }

# crypt
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"

## parsers tokenizers
# markdown parser
pulldown-cmark = "0.13.0"
# json
simd-json = "0.15.1"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# connectivity
webrtc = "0.13.0"

# web framework
axum = { version = "0.8.4", features = ["ws"] }

rand = "0.9.2"
tempfile = "3.20.0"
directories-next = "2.0.0"
generic-array = "1.2.0"
uuid = "1.18.0"
bytes = "1.10.1"

once_cell = "1.21.3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
authors = ["Hash2000 <infinitehash@yandex.ru>"]
categories = [
	"tools",
	"chat"
]
repository = "https://github.com/hash2000/mp-little-boat-rs"
license = "SSPL"
