[package]
name = "little-boat-abstractions"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
simd-json.workspace = true