[package]
name = "little-boat-client-term"
default-run = "little-boat-client-term"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true

[[bin]]
name = "little-boat-client-term"
path = "src/main.rs"

[dependencies]
little-boat-service-chat = { path = "../little-boat-service-chat" }
little-boat-db = { path = "../little-boat-db" }
little-boat-core = { path = "../little-boat-core" }
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tokio.workspace = true

