[package]
name = "little-boat-client"
default-run = "little-boat-client"
build = "src/build.rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true

[[bin]]
name = "little-boat-client"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
slint.workspace = true

[build-dependencies]
slint-build.workspace = true