[package]
name = "little-boat-client"
default-run = "little-boat-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true

[[bin]]
name = "little-boat-client"
path = "src/main.rs"

[dependencies]
little-boat-db = { path = "../little-boat-db" }
little-boat-core = { path = "../little-boat-core" }
tokio.workspace = true
iced.workspace = true
anyhow.workspace = true
simd-json.workspace = true
once_cell.workspace = true
axum.workspace = true
futures.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true