[package]
name = "little-boat-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
little-boat-db = { path = "../little-boat-db" }
anyhow.workspace = true
directories-next.workspace = true
