[package]
name = "little-boat-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sled.workspace = true
jsonwebtoken.workspace = true
simd-json.workspace = true
anyhow.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
tempfile.workspace = true
thiserror.workspace = true
directories-next.workspace = true