[package]
name = "little-boat-service-signaling"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
little-boat-abstractions = { path = "../little-boat-abstractions"}
tokio.workspace = true
webrtc.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
